--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
 		<script src="/js/jquery.jplayer.min.js"></script>
+		<script src="/js/purl.js"></script>
 		<script src="/js/vexflow.min.js"></script>
 		<script src="/js/underscore.min.js"></script>
 		<script src="/js/tabdiv.min.js"></script>
