--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<script src="/js/bg.js"></script>
 		<script>
 $(function() {
+	if (window.top != window.self)
+		window.top.location = window.self.location;
 	if (new Bandcamp().getBandcampData(buildAlbums)) {
 		$('.bg-err').removeClass('bg-hide');
 	}
