--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@ $(function() {
 	}
 });
 </script>
-	</head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-13177210-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
 	<body id="bg-body" class="ui-widget-header">
 		<!-- Facebook JS API -->
 		<div id="fb-root"></div>
@@ -38,8 +48,12 @@ $(function() {
 }(document, 'script', 'facebook-jssdk'));</script>
 
 		<!-- Start page content -->
+		<div id="bg-prefs-dialog"></div>
 		<div id="bg-header">
-			<div  id="bg-err" class="bg-hide ui-state-error ui-corner-all" title="Bandcamp failed to respond. Data in the music pane has been pulled from cache and may be stale."><span class="ui-icon ui-icon-alert"></span></div>
+			<div id="bg-err" class="bg-hide ui-state-error ui-corner-all" title="Bandcamp failed to respond. Data in the music pane has been pulled from cache and may be stale.">
+				<span class="ui-icon ui-icon-alert"></span>
+			</div>
+			<div id="bg-prefs-button" class="bg-hide ui-widget-content ui-icon ui-icon-gear" title="Preferences"></div>
 			<span>Brian Gray. Nerd Rock.</span>
 		</div>
 		<div id="bg-shadow-box" class="bg-top-level-tabs">
