--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script>
+if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + '?' + window.self.location.search);
+		</script>
 		<meta charset="UTF-8">
 		<title>Brian Gray. Nerd Rock.</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/overcast/jquery-ui.css">
@@ -18,8 +21,6 @@
 		<script src="/js/bg.js"></script>
 		<script>
 $(function() {
-	if (window.top != window.self)
-		window.top.location = window.self.location;
 	if (new Bandcamp().getBandcampData(buildAlbums)) {
 		$('.bg-err').removeClass('bg-hide');
 	}
