--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script>
-if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + '?' + window.self.location.search);
+if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + window.self.location.search);
 		</script>
 		<meta charset="UTF-8">
 		<title>Brian Gray. Nerd Rock.</title>
