--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(function() {
 				<li><a href="#bg-github">Code</a></li>
 			</ul>
 			<div id="bg-contents">
-				<div id="bg-blog"><iframe src="https://briangraymusic.wordpress.com/"></iframe></div>
+				<div id="bg-blog"><iframe id="bg-blogframe"></iframe></div>
 				<div id="bg-music"></div>
 <!--
 				<div id="bg-begging"><iframe src="http://www.patreon.com/BrianGray"></iframe></div>
