--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ $(function() {
 				<li><a href="#bg-shadow-begging">Begging</a></li>
 -->
 				<li><a href="#bg-shadow-social">Social</a></li>
+				<li><a href="#bg-shadow-tribbulous">Business</a></li>
 				<li><a href="#bg-shadow-github">Code</a></li>
 			</ul>
 		</div>
@@ -76,6 +77,7 @@ $(function() {
 				<li><a href="#bg-begging">Begging</a></li>
 -->
 				<li><a href="#bg-social">Social</a></li>
+				<li><a href="#bg-tribbulous">Business</a></li>
 				<li><a href="#bg-github">Code</a></li>
 			</ul>
 			<div id="bg-contents">
@@ -89,6 +91,7 @@ $(function() {
 					<td id="bg-twitter"><a class="twitter-timeline" href="https://twitter.com/BrianGrayMusic" data-widget-id="555018606363561985">Tweets by @BrianGrayMusic</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></td>
 				</table>
+				<div id="bg-tribbulous"><p>This page is to track all the administrative activities required to set up a bona fide business to handle all my music activities. Until I’m up and running officially, legally, let’s consider this page a work in progress.</p><iframe src="https://trello.com/b/42WKzOWs.html"></iframe></div>
 				<div id="bg-github">How meta is this? Here's the code for this web site. Feel free to clone the <a href="https://github.com/bgraymusic/nerdrock" target="_blank">original repo</a>, or just browse inline by clicking the link below.</div>
 			</div>
 		</div>
