--- a/index.html
+++ b/index.html
@@ -12,31 +12,39 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
 		<script src="/js/jquery.jplayer.min.js"></script>
 		<script src="/js/purl.js"></script>
+<!--
 		<script src="/js/vexflow.min.js"></script>
 		<script src="/js/underscore.min.js"></script>
 		<script src="/js/tabdiv.min.js"></script>
+-->
 		<script src="/js/repo.min.js"></script>
 		<script src="/js/bandcamp.js"></script>
 		<script src="/js/track-info.js"></script>
+		<script src="/js/BGDiscography.js"></script>
+		<script src="/js/BGAlbum.js"></script>
+		<script src="/js/BGTrack.js"></script>
 		<script src="/js/bg.js"></script>
+
+		<!-- Bootstrap UI with a BandCamp query fed to the main callback -->
 		<script>
 $(function() {
-	if (new Bandcamp().getBandcampData(buildAlbums)) {
+	if (new Bandcamp().getBandcampData(onDataComplete)) {
 		$('.bg-err').removeClass('bg-hide');
 	}
 });
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		</script>
 
-  ga('create', 'UA-13177210-3', 'auto');
-  ga('send', 'pageview');
+		<!-- Google Analytics -->
+		<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-13177210-3', 'auto');
+ga('send', 'pageview');
+		</script>
 
-</script>
-</head>
+	</head>
 	<body id="bg-body" class="ui-widget-header">
 		<!-- Facebook JS API -->
 		<div id="fb-root"></div>
