--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
 if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + window.self.location.search);
 		</script>
 		<meta charset="UTF-8">
+
+		<meta name="application-name" content="Brian Gray. Nerd Rock."/>
+<!--
+		<meta name="msapplication-TileColor" content="#F0F8FF"/>
+		<meta name="msapplication-square70x70logo" content="tiny.png"/>
+		<meta name="msapplication-square150x150logo" content="square.png"/>
+		<meta name="msapplication-wide310x150logo" content="wide.png"/>
+		<meta name="msapplication-square310x310logo" content="large.png"/>
+-->
+
 		<title>Brian Gray. Nerd Rock.</title>
+
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/overcast/jquery-ui.css">
 		<link rel="stylesheet" href="/css/bg.css">
+
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 		<script src="/js/jquery.jplayer.min.js"></script>
 		<script src="/js/purl.js"></script>
 <!--
