--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<meta charset="UTF-8">
 
 		<meta name="application-name" content="Brian Gray. Nerd Rock."/>
-<!--
 		<meta name="msapplication-TileColor" content="#F0F8FF"/>
-		<meta name="msapplication-square70x70logo" content="tiny.png"/>
-		<meta name="msapplication-square150x150logo" content="square.png"/>
-		<meta name="msapplication-wide310x150logo" content="wide.png"/>
-		<meta name="msapplication-square310x310logo" content="large.png"/>
--->
+		<meta name="msapplication-square70x70logo" content="img/logo_tiny.png"/>
+		<meta name="msapplication-square150x150logo" content="img/logo_square.png"/>
+		<meta name="msapplication-wide310x150logo" content="img/logo_wide.png"/>
+		<meta name="msapplication-square310x310logo" content="img/logo_large.png"/>
 
 		<title>Brian Gray. Nerd Rock.</title>
 
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/overcast/jquery-ui.css">
-		<link rel="stylesheet" href="/css/bg.css">
+
+		<link rel="stylesheet" media="screen and (max-width: 520px)" href="/css/bg-mobile.css">
+		<link rel="stylesheet" media="screen and (min-width: 520px) and (max-width: 660px)" href="/css/bg-noshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 660px) and (max-width: 710px)" href="/css/bg-smallshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 710px) and (max-width: 760px)" href="/css/bg-medshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 760px) and (max-width: 880px)" href="/css/bg-novol.css">
+		<link rel="stylesheet" media="screen and (min-width: 880px)" href="/css/bg-full.css">
 
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
