more responsive stuff

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<meta name="msapplication-square150x150logo" content="img/logo_square.png"/>
 		<meta name="msapplication-wide310x150logo" content="img/logo_wide.png"/>
 		<meta name="msapplication-square310x310logo" content="img/logo_large.png"/>
+		<meta name="viewport" content="initial-scale=1"/>
 
 		<title>Brian Gray. Nerd Rock.</title>
 
