yet more responsive stuff

--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 
 		<title>Brian Gray. Nerd Rock.</title>
 
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/overcast/jquery-ui.css">
+		<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/overcast/jquery-ui.css">
 
+		<link rel="stylesheet" href="/css/bg-common.css">
 		<link rel="stylesheet" media="screen and (max-width: 520px)" href="/css/bg-mobile.css">
-		<link rel="stylesheet" media="screen and (min-width: 520px) and (max-width: 660px)" href="/css/bg-noshuttle.css">
-		<link rel="stylesheet" media="screen and (min-width: 660px) and (max-width: 710px)" href="/css/bg-smallshuttle.css">
-		<link rel="stylesheet" media="screen and (min-width: 710px) and (max-width: 760px)" href="/css/bg-medshuttle.css">
-		<link rel="stylesheet" media="screen and (min-width: 760px) and (max-width: 880px)" href="/css/bg-novol.css">
-		<link rel="stylesheet" media="screen and (min-width: 880px)" href="/css/bg-full.css">
+		<link rel="stylesheet" media="screen and (min-width: 521px)" href="/css/bg-immobile.css">
 
-		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+		<link rel="stylesheet" media="screen and (min-width: 521px) and (max-width: 660px)" href="/css/bg-noshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 661px) and (max-width: 710px)" href="/css/bg-smallshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 711px) and (max-width: 760px)" href="/css/bg-medshuttle.css">
+		<link rel="stylesheet" media="screen and (min-width: 761px) and (max-width: 880px)" href="/css/bg-novol.css">
+		<link rel="stylesheet" media="screen and (min-width: 881px)" href="/css/bg-full.css">
+
+		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 		<script src="/js/jquery.jplayer.min.js"></script>
 		<script src="/js/purl.js"></script>
 <!--
