--- a/index.html
+++ b/index.html
@@ -52,36 +52,11 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<script src="/js/bg.js"></script>
 
 		<!-- Bootstrap UI with a BandCamp query fed to the main callback -->
-		<script>
-$(function() {
-	if (new Bandcamp().getBandcampData(onDataComplete)) {
-		$('.bg-err').removeClass('bg-hide');
-	}
-});
-		</script>
-
+		<script>$(function(){if(new Bandcamp().getBandcampData(onDataComplete)){$('.bg-err').removeClass('bg-hide');}});</script>
 		<!-- Google Analytics -->
-		<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-13177210-3', 'auto');
-ga('send', 'pageview');
-		</script>
-
+		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-13177210-3', 'auto');ga('send', 'pageview');</script>
 	</head>
 	<body id="bg-body" class="ui-widget-header">
-		<!-- Facebook JS API -->
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
 		<!-- Start page content -->
 		<div id="bg-header">
 			<div id="bg-global-stuff" class="bg-hide">
@@ -143,6 +118,10 @@ ga('send', 'pageview');
 		<div id="bg-cannot-save-badges-alert" class="ui-state-error" title="Cannot Save Badge(s)">
 			<p><span class="bg-alert-icon ui-icon ui-icon-alert"></span>Your browser does not support local storage, and so cannot save your badges. Please consider upgrading.</p>
 		</div>
+
+		<!-- Facebook JS API -->
+		<script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script>
+		<!-- Twitter JS API -->
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	</body>
 </html>
