--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script>
-if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + window.self.location.search);
-		</script>
+		<script>if (window.top != window.self) window.top.location.replace(window.top.location.protocol + '//' + window.top.location.host + window.self.location.search);</script>
 		<meta charset="UTF-8">
 
 		<meta name="application-name" content="Brian Gray. Nerd Rock."/>
@@ -37,11 +35,6 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 		<script src="/js/jquery.jplayer.min.js"></script>
 		<script src="/js/purl.js"></script>
-<!--
-		<script src="/js/vexflow.min.js"></script>
-		<script src="/js/underscore.min.js"></script>
-		<script src="/js/tabdiv.min.js"></script>
--->
 		<script src="/js/repo.min.js"></script>
 		<script src="/js/bandcamp.js"></script>
 		<script src="/js/track-info.js"></script>
@@ -57,6 +50,7 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-13177210-3', 'auto');ga('send', 'pageview');</script>
 	</head>
 	<body id="bg-body" class="ui-widget-header">
+
 		<!-- Start page content -->
 		<div id="bg-header">
 			<div id="bg-global-stuff" class="bg-hide">
@@ -89,7 +83,7 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 				<div id="bg-music"></div>
 				<table id="bg-social"><tr>
 					<td id="bg-facebook"><div class="fb-page" data-href="https://www.facebook.com/bgraymusic" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/bgraymusic"><a href="https://www.facebook.com/bgraymusic">Brian Gray</a></blockquote></div></div></td>
-					<td id="bg-twitter"><a class="twitter-timeline" href="https://twitter.com/BrianGrayMusic" data-widget-id="555018606363561985">Tweets by @BrianGrayMusic</a></td>
+					<td id="bg-twitter"><a class="twitter-timeline" href="https://twitter.com/BrianGrayMusic" data-widget-id="555018606363561985"></a></td>
 				</table>
 				<div id="bg-tribbulous"><p>This page is to track all the administrative activities required to set up a bona fide business to handle all my music activities. Until I’m up and running officially, legally, let’s consider this page a work in progress. For now, I'm actually doing the most hands-on work with building out my studio, so here we see the progress with that.</p><iframe src="https://trello.com/b/7OmMrxYJ.html"></iframe></div>
 				<div id="bg-github">How meta is this? Here's the code for this web site. Feel free to clone the <a href="https://github.com/bgraymusic/nerdrock" target="_blank">original repo</a>, or just browse inline by clicking the link below.</div>
@@ -103,7 +97,7 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		</div>
 		<div id="bg-social-buttons">
 			<div class="fb-like" data-href="https://www.facebook.com/bgraymusic" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-			<a href="https://twitter.com/BrianGrayMusic" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @BrianGrayMusic</a>
+			<a href="https://twitter.com/BrianGrayMusic" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
 		</div>
 		<div id="bg-badge-stuff">
 			<div id="bg-badges"></div>
@@ -123,5 +117,6 @@ if (window.top != window.self) window.top.location.replace(window.top.location.p
 		<script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script>
 		<!-- Twitter JS API -->
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
 	</body>
 </html>
