--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
 				All music is licensed under a <a href="http://creativecommons.org/licenses/by-nc/3.0/us/" rel="nofollow">Creative Commons Attribution-Noncommercial 3.0 United States License</a>
 			</span>
 		</div>
-		<div id="bg-social-buttons">
+		<div class="bg-social-buttons bg-left">
 			<div class="fb-like" data-href="https://www.facebook.com/bgraymusic" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+		</div>
+		<div class="bg-social-buttons bg-right">
 			<a href="https://twitter.com/BrianGrayMusic" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
+			<button id="bg-patreon-button"><img src="https://s3.amazonaws.com/patreon_public_assets/toolbox/patreon.png"/></button>
 		</div>
 		<div id="bg-badge-stuff">
 			<div id="bg-badges"></div>
