--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 		<meta property="og:url" content="http://briangraymusic.com" />
 		<meta property="og:title" content="Brian Gray. Nerd Rock." />
+		<!-- Brian playing guitar at the Presidential Suite 2015 -->
 		<meta property="og:image" content="http://briangraymusic.com/img/presidential_suite_show.jpg" />
+		<!-- First One Here -->
+		<meta property="og:image" content="http://briangraymusic.com/img/columbus.jpg" />
+		<!-- Building an Orc Army -->
+		<meta property="og:image" content="http://briangraymusic.com/img/saruman.jpg" />
 		<meta property="og:description" content="Nerd rock all up in your tympanic membranes." />
 
 		<title>Brian Gray. Nerd Rock.</title>
