--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<meta property="og:title" content="Brian Gray. Nerd Rock." />
 		<!-- Brian playing guitar at the Presidential Suite 2015 -->
 		<meta property="og:image" content="http://briangraymusic.com/img/presidential_suite_show.jpg" />
+		<!-- π Day pie -->
+		<meta property="og:image" content="http://briangraymusic.com/img/pie.jpg" />
 		<!-- First One Here -->
 		<meta property="og:image" content="http://briangraymusic.com/img/columbus.jpg" />
 		<!-- Building an Orc Army -->
