Added ref to Mae track art

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<meta property="og:image" content="http://briangraymusic.com/img/columbus.jpg" />
 		<!-- Building an Orc Army -->
 		<meta property="og:image" content="http://briangraymusic.com/img/saruman.jpg" />
+		<!-- Queen of Oz -->
+		<meta property="og:image" content="http://briangraymusic.com/img/mae.jpg" />
 		<meta property="og:description" content="Nerd rock all up in your tympanic membranes." />
 
 		<title>Brian Gray. Nerd Rock.</title>
