Slight content and spacing tweaks to the nag pane

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
 
 		<div id="bg-nag">
 			<div id="bg-nag-text">
-Welcome to my web site, for the first time as far as I can tell!
+<p class="bg-greeting">Hey, Brian here.</p>
+<p>Welcome to my web site, for the first time as far as I can tell!
 Unless I wrote defective code, this should be the only time you ever see this message.
 I don't require payment for my music, and I don't host advertising.
-The only way I want to make money for songwriting is through voluntary patronage, so please consider buying a song or two via the "shopping cart" buttons and name your price.
+The only way I make any money via songwriting is through voluntary patronage, so please consider buying a song or two via the "shopping cart" buttons and name your price.
 Or even better, visit my Patreon page, watch my pitch video, and browse the various levels of rewards I offer for signing up as a patron.
-I'll stop bothering you now and let you enjoy my site as intended: at full browser window height.
+I'll stop bothering you now and let you enjoy my site as intended: at full browser window height.<p>
 			</div>
 			<div id="bg-nag-buttons">
 				<button class="bg-patreon-button"><span class="bg-patreon-prefix">Check out my </span><img src="https://s3.amazonaws.com/patreon_public_assets/toolbox/patreon.png"/></button>
