Added Abernathy Fitzgerald image

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		<meta property="og:image" content="http://briangraymusic.com/img/saruman.jpg" />
 		<!-- Queen of Oz -->
 		<meta property="og:image" content="http://briangraymusic.com/img/mae.jpg" />
+		<!-- Abernathy Fitzgerald -->
+		<meta property="og:image" content="http://briangraymusic.com/img/abernathy.jpg" />
 
 		<title>Brian Gray. Nerd Rock.</title>
 
