Implemented SFW mode

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<meta property="og:image" content="http://briangraymusic.com/img/mae.jpg" />
 		<!-- Abernathy Fitzgerald -->
 		<meta property="og:image" content="http://briangraymusic.com/img/abernathy.jpg" />
+		<link rel="image_src" href="http://briangraymusic.com/img/abernathy.jpg" />
 
 		<title>Brian Gray. Nerd Rock.</title>
 
@@ -156,6 +157,9 @@ I'll stop bothering you now and let you enjoy my site as intended: at full brows
 			</div>
 			<div id="bg-cannot-save-badges-alert" class="ui-state-error" title="Cannot Save Badge(s)">
 				<p><span class="bg-alert-icon ui-icon ui-icon-alert"></span>Your browser does not support local storage, and so cannot save your badges. Please consider upgrading.</p>
+			</div>
+			<div id="bg-nsfw-alert" title="SFW Mode">
+				<p>You are in Safe For (Brian's) Work mode and have requested to hear a NSFW song. Are you sure you want to switch the site to NSFW mode? By doing so you implicitly agree not to hold anything you hear against me, professionally.</p>
 			</div>
 		</div>
 
