Added image link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 		<!-- Abernathy Fitzgerald -->
 		<meta property="og:image" content="http://briangraymusic.com/img/abernathy.jpg" />
 		<link rel="image_src" href="http://briangraymusic.com/img/abernathy.jpg" />
+		<!-- Code Red -->
+		<meta property="og:image" content="http://briangraymusic.com/img/maximum_overdrive.jpg" />
+		<link rel="image_src" href="http://briangraymusic.com/img/maximum_overdrive.jpg" />
 
 		<title>Brian Gray. Nerd Rock.</title>
 
