Re-ordered images for Facebook

--- a/index.html
+++ b/index.html
@@ -18,20 +18,24 @@
 
 		<!-- Brian playing guitar at the Presidential Suite 2015 -->
 		<meta property="og:image" content="http://briangraymusic.com/img/presidential_suite_show.jpg" />
-		<!-- π Day pie -->
-		<meta property="og:image" content="http://briangraymusic.com/img/pie.jpg" />
-		<!-- First One Here -->
-		<meta property="og:image" content="http://briangraymusic.com/img/columbus.jpg" />
-		<!-- Building an Orc Army -->
-		<meta property="og:image" content="http://briangraymusic.com/img/saruman.jpg" />
-		<!-- Queen of Oz -->
-		<meta property="og:image" content="http://briangraymusic.com/img/mae.jpg" />
-		<!-- Abernathy Fitzgerald -->
-		<meta property="og:image" content="http://briangraymusic.com/img/abernathy.jpg" />
-		<link rel="image_src" href="http://briangraymusic.com/img/abernathy.jpg" />
+
+		<!-- Happy Me -->
+		<meta property="og:image" content="http://briangraymusic.com/img/happy_me.jpg" />
+		<link rel="image_src" href="http://briangraymusic.com/img/happy_me.jpg" />
 		<!-- Code Red -->
 		<meta property="og:image" content="http://briangraymusic.com/img/maximum_overdrive.jpg" />
 		<link rel="image_src" href="http://briangraymusic.com/img/maximum_overdrive.jpg" />
+		<!-- Abernathy Fitzgerald -->
+		<meta property="og:image" content="http://briangraymusic.com/img/abernathy.jpg" />
+		<link rel="image_src" href="http://briangraymusic.com/img/abernathy.jpg" />
+		<!-- Queen of Oz -->
+		<meta property="og:image" content="http://briangraymusic.com/img/mae.jpg" />
+		<!-- Building an Orc Army -->
+		<meta property="og:image" content="http://briangraymusic.com/img/saruman.jpg" />
+		<!-- First One Here -->
+		<meta property="og:image" content="http://briangraymusic.com/img/columbus.jpg" />
+		<!-- π Day pie -->
+		<meta property="og:image" content="http://briangraymusic.com/img/pie.jpg" />
 
 		<title>Brian Gray. Nerd Rock.</title>
 
