--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
 		<title>Brian Gray. Nerd Rock.</title>
 
+<!-- 
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.0/themes/overcast/jquery-ui.css">
+ -->
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/overcast/jquery-ui.css">
 
 		<link rel="stylesheet" href="/css/bg-common.css">
 		<link rel="stylesheet" media="screen and (max-width: 520px)" href="/css/bg-mobile.css">
@@ -56,15 +59,12 @@
 		<link rel="stylesheet" media="screen and (min-width: 740px) and (max-width: 860px)" href="/css/bg-novol.css">
 		<link rel="stylesheet" media="screen and (min-width: 860px)" href="/css/bg-full.css">
 
-<!-- 
-		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
- -->
-		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-		<script src="/js/jquery.jplayer.min.js"></script>
-		<script src="/js/purl.js"></script>
-		<script src="/js/repo.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/purl/2.3.1/purl.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/repo.js/5c0eae0f1b/repo.min.js"></script>
+
 		<script src="/js/bandcamp.js"></script>
 		<script src="/js/track-info.js"></script>
 		<script src="/js/BGDiscography.js"></script>
@@ -74,10 +74,6 @@
 		<script src="/js/BGNag.js"></script>
 		<script src="/js/bg.js"></script>
 
-		<!-- Bootstrap UI with a BandCamp query fed to the main callback -->
-<!-- 
-		<script>$(function(){if(new Bandcamp().getBandcampData(onDataComplete)){$('.bg-err').removeClass('bg-hide');}});</script>
- -->
 		<!-- Google Analytics -->
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-13177210-3', 'auto');ga('send', 'pageview');</script>
 	</head>
