TODO: package/compress JS

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/purl/2.3.1/purl.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/repo.js/5c0eae0f1b/repo.min.js"></script>
 
+		<!-- TODO: all local JS; good candidates for packaging and minifying into a single bgnr.min.js -->
 		<script src="/js/bandcamp.js"></script>
 		<script src="/js/track-info.js"></script>
 		<script src="/js/BGDiscography.js"></script>
