--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
+<!-- 
+		<script src="/js/jquery.jplayer.min.js"></script>
+ -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/purl/2.3.1/purl.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/repo.js/5c0eae0f1b/repo.min.js"></script>
 
@@ -111,7 +114,7 @@ I'll stop bothering you now and let you enjoy my site as intended: at full brows
 					<li><a href="#bg-shadow-blog">News</a></li>
 					<li><a href="#bg-shadow-music">Music</a></li>
 					<li><a href="#bg-shadow-social">Social</a></li>
-					<li><a href="#bg-shadow-tribbulous">Business</a></li>
+					<li><a href="#bg-shadow-tribbulous">Studio</a></li>
 					<li><a href="#bg-shadow-github">Code</a></li>
 				</ul>
 			</div>
@@ -120,7 +123,7 @@ I'll stop bothering you now and let you enjoy my site as intended: at full brows
 					<li><a href="#bg-blog">News</a></li>
 					<li><a href="#bg-music">Music</a></li>
 					<li><a href="#bg-social">Social</a></li>
-					<li><a href="#bg-tribbulous">Business</a></li>
+					<li><a href="#bg-tribbulous">Studio</a></li>
 					<li><a href="#bg-github">Code</a></li>
 				</ul>
 				<div id="bg-contents">
@@ -149,12 +152,11 @@ I'll stop bothering you now and let you enjoy my site as intended: at full brows
 			</div>
 			<div id="bg-badge-stuff">
 				<div id="bg-badges"></div>
-	<!--
+				<button id="bg-add-badge-button" title="Add new badge…"></button>
 				<div id="bg-add-badge-dialog" class="bg-hide">
 					<input id="bg-add-badge-value" type="text" title="Enter the secret code for your badge"/>
 					<button id="bg-add-badge-submit">Add</button>
 				</div>
-	-->
 			</div>
 			<div id="bg-new-badge-alert" title="Achievement Unlocked">
 				<p><img id="bg-new-badge-icon"/><span id="bg-new-badge-msg"></span></p>
